<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/passwordListFragment">

    <fragment
        android:id="@+id/passwordListFragment"
        android:name="ru.yarsu.keyforge.ui.list.PasswordListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_password_list">

        <action
            android:id="@+id/action_list_to_detail"
            app:destination="@id/passwordDetailFragment" />

        <action
            android:id="@+id/action_list_to_addEdit"
            app:destination="@id/addEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/passwordDetailFragment"
        android:name="ru.yarsu.keyforge.ui.detail.PasswordDetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_password_detail">

        <argument
            android:name="entryId"
            app:argType="long" />

        <action
            android:id="@+id/action_detail_to_addEdit"
            app:destination="@id/addEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditFragment"
        android:name="ru.yarsu.keyforge.ui.addedit.AddEditFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add_edit">

        <argument
            android:name="entryId"
            app:argType="long" />

        <action
            android:id="@+id/action_addEdit_to_generator"
            app:destination="@id/generatorFragment" />
    </fragment>

    <fragment
        android:id="@+id/generatorFragment"
        android:name="ru.yarsu.keyforge.ui.generator.GeneratorFragment"
        android:label="@string/title_generator"
        tools:layout="@layout/fragment_generator" />

</navigation>
